Fix signature issue